data/collection/fixes/descriptions/java/JDK-8016060
import javafx.scene.input.MouseEvent;
import javafx.scene.shape.Rectangle;


public class Issue {
    public static void main(String[] args) {
        Rectangle r = new Rectangle();
        r.addEventHandler(MouseEvent.MOUSE_CLICKED, t -> {
            System.out.println("dfdf");
            if (true) {
                return;
            } else {
                System.out.println("tttt");
            }
        });

    }
}
//output 
Issue.java:11: error: incompatible types: missing return value
                return;
                ^
1 error